@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

'left to right direction

class CreateJobUI {
    +createNewJob() : void
}

class CreateJobController {
-jobRepository : JobRepository
    +createJob(title : String) : void
    +CreateJobController()
    '+getJobRepository() : JobRepository
}

class Repositories {
    +getInstance() : Repositories
    +getJobRepository() : JobRepository
    - instance : Repositories
    - Repositories()
    -jobRepository : JobRepository
}

class JobRepository {
-jobList : List<Job>
+JobRepository()
    +createJob(title : String) : void
    +checkForDuplicates() : boolean
    +addJob(job) : void
    +getJobList() : List<Job>
}

class Job {
    - title : String
    + Job(title : String)
    + setTitle(title : String) : void
    + getTitle() : String
    +verifyFilled(title : String) : boolean
    +verifySpecialCharacters(title : String) : boolean
}

CreateJobUI ..> CreateJobController
Repositories --> "1" JobRepository : jobRepository
Repositories --> Repositories : instance
JobRepository --> "*" Job
CreateJobController ..> Repositories : repositories
CreateJobController ..> JobRepository : jobRepository

@enduml
